src/objects/Project__c.object
<CustomObject>
    <description>Information about SFDC projects</description>
    <fields>
        <fullName>Client_Name1__c</fullName>
        <formula>Client_Name__r.Client_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_Hrs__c</fullName>
        <label>Duration (Hrs)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for project</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1. Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. high</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Project  start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1. Speculative(-50%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Opportunity (50-75%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Likely (76%-90%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Firm/Won (90%+)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <label>Win-Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Name__c</columns>
        <columns>Duration_Hrs__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Win_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Projects_By_PM</fullName>
        <columns>NAME</columns>
        <columns>Client_Name1__c</columns>
        <filterScope>Everything</filterScope>
        <label>Projects By PM</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Project No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>